Add comments and container styling

--- a/website-design-system-starting/starting/index.html
+++ b/website-design-system-starting/starting/index.html
@@ -67,7 +67,7 @@
                     <ul>
                         <li>Font-weight: 700 (bold)</li>
                         <li>Font-size: 32px</li>
-                        <li>Font-family: Alumni Sans Pinstripe</li>
+                        <li>Font-family: Schibsted Grotesk</li>
                     </ul>
                 </div>
                 <div class="grotesk">
