clean up stylesheet

--- a/website-design-system-starting/starting/index.html
+++ b/website-design-system-starting/starting/index.html
@@ -18,19 +18,19 @@
             <div class="colors-only">
                 <div class="mint color">
                     <p>Frosty Mint</p>
-                    <p>CAD2C5</p>
+                    <p>#CAD2C5</p>
                 </div>
                 <div class="cactus color">
                     <p>Summer Cactus</p>
-                    <p>84A98C</p>
+                    <p>#84A98C</p>
                 </div>
                 <div class="swamp color">
                     <p>Swamp Monster</p>
-                    <p>52796F</p>
+                    <p>#52796F</p>
                 </div>
                 <div class="verdant color">
                     <p>Verdant Velvet</p>
-                    <p>354F52</p>
+                    <p>#354F52</p>
                 </div>
             </div>
             
