--- a/TeaCozy/index.html
+++ b/TeaCozy/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./resources/css/index.css">
 </head>
 <body>
+
     <header class="page-header">
         <img class="tea-cozy-logo" src="./resources/images/logo.png" alt="Tea Cozy logo">
         <nav class="topnav">
@@ -53,33 +54,38 @@
                 </div>
             </div>
         </div>
-        <div>
+
+        <div class="locations-div">
             <h2>Locations</h2>
-            <div>
-                <h3>Downtown</h3>
-                <p>384 West 4th St</p>
-                <p>Suite 108</p>
-                <p>Portland, Maine</p>
+            <div class="location-container">
+                <div class="location">
+                    <h3>Downtown</h3>
+                    <p>384 West 4th St</p>
+                    <p>Suite 108</p>
+                    <p>Portland, Maine</p>
+                </div>
+                <div class="location">
+                    <h3>East Bayside</h3>
+                    <p>3433 Phisherman's Avenue</p>
+                    <p>(Northwest Corner)</p>
+                    <p>Portland, Maine</p>
+                </div>
+                <div class="location">
+                    <h3>Oakdale</h3>
+                    <p>515 Crescent Avenue</p>
+                    <p>Second Floor</p>
+                    <p>Portland, Maine</p>
+                </div>
             </div>
-            <div>
-                <h3>East Bayside</h3>
-                <p>3433 Phisherman's Avenue</p>
-                <p>(Northwest Corner)</p>
-                <p>Portland, Maine</p>
-            </div>
-            <div>
-                <h3>Oakdale</h3>
-                <p>515 Crescent Avenue</p>
-                <p>Second Floor</p>
-                <p>Portland, Maine</p>
-            </div>
+        
         </div>
-        <div>
-            <h2>The Tea Cozy</h2>
-            <h5>contact@theteacozy.com</h5>
-            <h5>917-555-8904</h5>
+        <div class="contact-div">
+            <h2 class="contact contact-name">The Tea Cozy</h2>
+            <h5 class="contact contact-email">contact@theteacozy.com</h5>
+            <h5 class="contact contact-phone">917-555-8904</h5>
         </div>
     </main>
+
     <footer>
         <h5>copyright The Tea Cozy 2017</h5>
     </footer>
