Add finishing touches on styling

--- a/TeaCozy/index.html
+++ b/TeaCozy/index.html
@@ -11,16 +11,16 @@
     <header class="page-header">
         <img class="tea-cozy-logo" src="./resources/images/logo.png" alt="Tea Cozy logo">
         <nav class="topnav">
-            <a href="#">Mission</a>
-            <a href="#">Featured Tea</a>
-            <a href="#">Locations</a>
+            <a href="#mission">Mission</a>
+            <a href="#featured-tea">Featured Tea</a>
+            <a href="#locations">Locations</a>
         </nav>
     </header>
 
     <main>
-        <div class="page-hero">
+        <div id="mission" class="page-hero">
             <img src="./resources/images/mission-background.png" alt="floral tea leaves in glass jar">
-            <div class="banner mission-banner">
+            <div class="mission-banner">
                 <h2>Our Mission</h2>
                 <h4>Handpicked, Artisanally Curated, 
                     Free Range, Sustainable, Small Bach, 
@@ -28,7 +28,7 @@
             </div> 
         </div>
         
-        <div class="tea-of-the-month-div">
+        <div id="featured-tea" class="tea-of-the-month-div">
             <h2>Tea of the Month</h2>
             <h4>What's Steeping at The Tea Cozy?</h4>
             <div class="teas-of-the-month-container">
@@ -55,7 +55,7 @@
             </div>
         </div>
 
-        <div class="locations-div">
+        <div id="locations" class="locations-div">
             <h2>Locations</h2>
             <div class="location-container">
                 <div class="location">
