--- a/flexbox-business-site-starting/index.html
+++ b/flexbox-business-site-starting/index.html
@@ -5,7 +5,8 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>On The Rocks</title>
     <link rel="stylesheet" href="./styles.css">
-    <meta>
+    <meta charset = "UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
 
   <body>
