Animate photo slide

--- a/flexbox-business-site-starting/index.html
+++ b/flexbox-business-site-starting/index.html
@@ -36,21 +36,17 @@
           <img src="./images/gallery/burger.png" alt="gourmet burger">
           <img src="./images/gallery/salad.png" alt="salad with toppings">
           <img src="./images/gallery/tortilla-chips.png" alt="salad with tortilla chips">
-          <img src="./images/gallery/bottle.png" alt="glass screw top bottle">
           <img src="./images/gallery/tacos.png" alt="plate of tacos">
-          <img src="./images/gallery/tables.png" alt="brick restaurant with tables and chairs">
-          <img src="./images/gallery/dining-room.png" alt="restaurant dining room">
+          <img src="./images/gallery/tables.png" alt="brick restaurant with tables and chairs">  
         </div>
-        <!-- <div class="gallery-slide">
+        <div class="gallery-slide">
           <img src="./images/gallery/drinks.png" alt="alcoholic drinks">
           <img src="./images/gallery/burger.png" alt="gourmet burger">
           <img src="./images/gallery/salad.png" alt="salad with toppings">
           <img src="./images/gallery/tortilla-chips.png" alt="salad with tortilla chips">
-          <img src="./images/gallery/bottle.png" alt="glass screw top bottle">
           <img src="./images/gallery/tacos.png" alt="plate of tacos">
-          <img src="./images/gallery/tables.png" alt="brick restaurant with tables and chairs">
-          <img src="./images/gallery/dining-room.png" alt="restaurant dining room">
-        </div> -->
+          <img src="./images/gallery/tables.png" alt="brick restaurant with tables and chairs">  
+        </div>
         
       </div>
 
