Change navbar styling

--- a/flexbox-business-site-starting/index.html
+++ b/flexbox-business-site-starting/index.html
@@ -19,14 +19,17 @@
         <h1>Ziggy's</h1>
         <h2>Pub & Restaurant</h2>
       </div>
+
+      <div class="navbar">
+        <nav class="links">
+          <a href="#mission">Our Mission</a>
+          <a href="#gallery">Gallery</a>
+          <a href="#locations">Locations</a>
+          <a href="#team">The Team</a>
+          <a href="#contact">Contact</a>
+        </nav>
+      </div>
       
-      <nav>
-        <a href="#mission">Our Mission</a>
-        <a href="#gallery">Gallery</a>
-        <a href="#locations">Locations</a>
-        <a href="#team">The Team</a>
-        <a href="#contact">Contact</a>
-      </nav>
     </header>
 
     <main>
